clusters/k3s-home/apps/media/sabnzbd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-http-route
  namespace: media
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "sabnzbd.fletcherlabs.net"
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 8080
