clusters/k3s-home/apps/media/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: media
  annotations:
    cilium.io/preserve-service-port: "true"
spec:
  ingressClassName: cilium
  rules:
    - host: sabnzbd.fletcherlabs.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
